# Physical-AI-and-Humanoid-Robotics_with_Reagchatbot

./: .npmignore  CHATBOT_IMPLEMENTATION.md  CLAUDE.md  README.md  TODO.md  vercel.json
.claude/: settings.local.json
.claude/commands/: sp.checklist.md  sp.git.commit_pr.md  sp.implement.md  sp.specify.md  sp.tasks.md
api/: __init__.py  api.py  config.py  dependencies.py  load_textbook_content.py  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  vercel_api.py
api/db/: connection.py  init_db.py
api/models/: chat.py  user.py
api/routers/: chat.py  debug.py
api/services/: cohere_service.py  rag_service.py  vector_service.py
book/: docusaurus.config.js  package.json  sidebars.js
book/docs/: intro.mdx
book/docs/module1/: introduction.mdx
book/docs/module2/: kinematics_dynamics.mdx  locomotion_balance.mdx
book/docs/module3/: decision_making_planning.mdx  human_robot_interaction.mdx  social_ethical_implications.mdx
book/docs/module4/: real_world_applications.mdx  societal_impact_ethics.mdx
book/src/components/Chatbot/: ChatbotModal.js  ChatbotModal.module.css  FloatingRobot.js  FloatingRobot.module.css
book/src/css/: custom.css
book/src/hooks/: useAuth.js
book/src/pages/: image-test.js  index.js  index.module.css
book/src/theme/: Root.js
book/src/utils/: auth.js
